--- a/src/app/admin/page.css
+++ b/src/app/admin/page.css
@@ -11,7 +11,7 @@ form {
     flex-direction: column;
     row-gap: 10px;
     justify-content: left;
-    align-items: center;
+    align-items: flex-start;
 }
 
 form div {
